<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bmi4"

    >


    <TextView
        android:layout_width="266dp"
        android:layout_height="57dp"
        android:text="@string/enter_your_information"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        style="@style/staly2"/>


    <EditText
        android:id="@+id/MyName"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edit2"
        android:hint="enter your name"
        android:inputType="textPersonName"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        style="@style/SizeText"/>

    <EditText
        android:id="@+id/MyHight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="enter your height"
        android:inputType="numberDecimal"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edit2"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/MyWeight"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="enter your weight"
        android:inputType="numberDecimal"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edit2"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"/>


    <TableRow
        android:layout_marginLeft="30dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:background="@drawable/edit2"
            android:entries="@array/gender"

            />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="50dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/remember_me"
            android:background="@drawable/edit2"
            android:layout_marginRight="10dp"
            />
    </TableRow>
    <TableRow
        android:layout_marginTop="30dp">


        <Button
            android:id="@+id/Save_info"
            style="@style/SizeText"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit"
            android:onClick="SaveMy_Infor"
            android:text="@string/save" />
    </TableRow>

    <TableRow

        android:layout_width="374dp"
        android:layout_height="234dp"

        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnBMI"
            style="@style/SizeText"
            android:layout_width="169dp"
            android:layout_height="67dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit"
            android:onClick="calculateBmi"
            android:text="@string/calculate_the_bmi" />

        <TextView
            android:id="@+id/res"
            style="@style/staly2"
            android:layout_width="164dp"
            android:layout_height="85dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit2"
            android:hint="@string/bmi" />

    </TableRow>

    <Button
        android:id="@+id/add"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="OpenNewActi"
        android:layout_marginTop="130dp"
        android:text="@string/go_to_second_activity"
        android:background="@drawable/edit"
        style="@style/SizeText"

        />

</TableLayout>